erDiagram
    User ||--o{ MenstrualCycle : "registra"
    User ||--o{ HormoneLevel : "mide"
    User ||--o{ SymptomLog : "registra"
    User ||--o{ UserCondition : "tiene"
    User ||--o{ PregnancyLog : "registra"
    User ||--o{ AIQuery : "realiza"
    User ||--o{ Notification : "recibe"
    User ||--o{ GuestAccess : "es propietario(owner)"
    User ||--o{ GuestAccess : "es invitado(guest)"
    User ||--|| MenopauseLog : "registra"
    User ||--|| OnboardingData : "completa"
    User ||--o{ UserPreference : "configura"
    User ||--o{ LifePhase : "atraviesa"
    
    Condition ||--o{ UserCondition : "asociada a"
    Condition ||--o{ Notification : "relacionada con"
    Condition }|--o{ Content : "asociada a"
    Condition }|--o{ AIQuery : "relacionada con"
    
    MenstrualCycle ||--o{ CycleDay : "contiene"
    CycleDay ||--o{ HormoneLevel : "registra"
    CycleDay ||--o{ DailyMood : "registra"
    CycleDay ||--o{ DaySymptom : "contiene"
    
    Symptom ||--o{ DaySymptom : "utilizado en"
    Symptom ||--o{ SymptomCategory : "pertenece a"
    
    GuestAccess ||--o{ Notification : "genera"
    GuestAccess ||--o{ GuestPermission : "define"

    User {
        int id PK
        string email "unique"
        array roles
        string password
        string username
        string name
        string lastName
        ProfileType profileType "enum"
        string genderIdentity
        date birthDate
        datetime createdAt
        datetime updatedAt
        bool state "default: true"
        bool onboardingCompleted "default: false"
    }
    
    MenstrualCycle {
        int id PK
        int user_id FK "not null"
        date startDate
        date endDate
        date estimatedNextStart
        int averageCycleLength
        int averageDuration
        string flowAmount "nullable"
        string flowColor "nullable"
        string flowOdor "nullable"
        int painLevel "nullable"
        string notes "nullable"
        datetime createdAt
        datetime updatedAt
    }
    
    CycleDay {
        int id PK
        int cycle_id FK "not null"
        date date
        int dayNumber
        CyclePhase phase "enum"
        int flowIntensity "nullable"
        datetime createdAt
        datetime updatedAt
    }
    
    DailyMood {
        int id PK
        int cycleDay_id FK "not null"
        string moodType
        int intensity
        string notes "nullable"
        datetime createdAt
    }
    
    DaySymptom {
        int id PK
        int cycleDay_id FK "not null"
        int symptom_id FK "not null"
        int intensity
        string notes "nullable"
        datetime createdAt
    }
    
    Symptom {
        int id PK
        string name
        string description
        int symptomCategory_id FK "not null"
        bool isCommon "default: true"
        bool state "default: true"
        datetime createdAt
    }
    
    SymptomCategory {
        int id PK
        string name
        string description
        string iconPath "nullable"
        bool state "default: true"
        datetime createdAt
    }
    
    HormoneLevel {
        int id PK
        int user_id FK "not null"
        int cycleDay_id FK "nullable"
        HormoneType hormoneType "enum"
        float level
        bool state "default: true"
        datetime createdAt
        datetime updatedAt
    }
    
    SymptomLog {
        int id PK
        int user_id FK "not null"
        date date
        string symptom
        int intensity
        text notes "nullable"
        bool state "default: true"
        datetime createdAt
        datetime updatedAt
    }
    
    UserCondition {
        int id PK
        int user_id FK "not null"
        int condition_id FK "not null"
        date startDate
        date endDate "nullable"
        string notes "nullable"
        datetime createdAt
        datetime updatedAt
        bool state "default: true"
    }
    
    Condition {
        int id PK
        string name
        string description
        bool isChronic "default: false"
        datetime createdAt
        datetime updatedAt
        bool state "default: true"
    }
    
    PregnancyLog {
        int id PK
        int user_id FK "not null"
        date startDate
        date dueDate
        int week "nullable"
        text symptoms "nullable"
        text fetalMovements "nullable"
        date ultrasoundDate "nullable"
        string notes "nullable"
        datetime createdAt
        datetime updatedAt
    }
    
    MenopauseLog {
        int id PK
        int user_id FK "not null"
        bool hotFlashes "default: false"
        bool moodSwings "nullable"
        bool vaginalDryness "nullable"
        bool insomnia "nullable"
        bool hormoneTherapy "nullable"
        text notes "nullable"
        datetime createdAt
        datetime updatedAt
    }
    
    Notification {
        int id PK
        int user_id FK "not null"
        int guestAccess_id FK "nullable"
        int condition_id FK "nullable"
        string title
        text message
        string type
        string priority "default: normal"
        string context "nullable"
        bool read "default: false"
        datetime readAt "nullable"
        datetime scheduledFor "nullable"
        datetime createdAt
        string targetUserType "default: primary"
        string relatedEntityType "nullable"
        int relatedEntityId "nullable"
        string actionUrl "nullable"
        string actionText "nullable"
        json metadata "nullable"
        bool dismissed "default: false"
    }
    
    Content {
        int id PK
        string title
        text description
        text content
        ContentType type "enum"
        CyclePhase targetPhase "enum, nullable"
        json tags "nullable"
        string imageUrl "nullable"
        datetime createdAt
        datetime updatedAt
    }
    
    GuestAccess {
        int id PK
        int owner_id FK "nullable"
        int guest_id FK "not null"
        GuestType guestType "enum"
        datetime expires_at
        bool state "default: true"
        datetime createdAt
        datetime updatedAt
    }
    
    GuestPermission {
        int id PK
        int guestAccess_id FK "not null"
        string resourceType
        string accessLevel "read, write, none"
        bool enabled "default: true"
        datetime createdAt
    }
    
    AIQuery {
        int id PK
        int user_id FK "not null"
        text query
        text response "nullable"
        datetime createdAt
        json metadata "nullable"
    }
    
    OnboardingData {
        int id PK
        int user_id FK "not null"
        date lastPeriodDate "nullable"
        int typicalCycleLength "nullable"
        int typicalPeriodDuration "nullable"
        json trackingPreferences
        LifePhaseType currentLifePhase "enum"
        bool trackingMenstrualCycle "default: false"
        bool trackingPregnancy "default: false"
        bool trackingMenopause "default: false"
        bool trackingHormones "default: false"
        bool trackingMood "default: false"
        bool emotionalParticipation "default: true"
        json initialSymptoms "nullable"
        json initialConditions "nullable"
        datetime completedAt "nullable"
        datetime createdAt
        datetime updatedAt
    }
    
    UserPreference {
        int id PK
        int user_id FK "not null"
        string preferenceKey
        string preferenceValue
        string category "app, notifications, privacy, etc."
        datetime createdAt
        datetime updatedAt
    }
    
    LifePhase {
        int id PK
        int user_id FK "not null"
        LifePhaseType lifePhaseType "enum"
        date startDate
        date endDate "nullable"
        json metadata "nullable"
        bool isActive "default: true"
        datetime createdAt
        datetime updatedAt
    }
